# BE_CHAT

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  dockerfile  main.py  pyproject.toml  requirements.txt  sockets.py
core/: config.py  databases.py  movement.py  redis.py
sockets/: sockets.py
test code/: back.py  front.js
