[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
pydantic-core = "^2.27.2"
bcrypt = "^4.2.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LOCALFOLDER"]
lines_after_imports = 2
combine_as_imports = true
reverse_relative = true
force_grid_wrap = 0
length_sort = false
